# NumeroidenTunnistus

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
documentation/: design.md  execution.md  maarittelydokumentti.md  manual.md  testing.md  tuntikirjanpito.md  weekly1.md  weekly2.md  weekly3.md  weekly4.md  weekly5.md  weekly6.md  worklog.md
src/: main.py
src/repositories/: data_repository.py
src/services/: classification_service.py  knn.py  number_classifier.py
src/tests/: foo_test.py
src/tests/repositories/: data_repository_test.py
src/tests/services/: knn_test.py  number_classifier_test.py
src/tests/utils/: utils_test.py
src/ui/: params.py  results.py  ui.py  window.py
src/ui/param_selection/: knn_options_widget.py  params_widget.py  results_widget.py
src/ui/result_widgets/: classification_widget.py  foobaar.py  progress_widget.py  results_widget.py  starting_widget.py
src/utils/: constants.py  utils.py
