[tool.poetry]
name = "repo"
version = "0.1.0"
description = ""
authors = ["Jusa Mankki <jusamankki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-mnist = "^0.7"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
